--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
             The nature of the world has been conceptualized differently in different fields.
             Some conceptions see the world as unique while others talk of a "plurality of worlds". 
             Some treat the world as one simple object while others analyze the world as a complex made up of many parts</p>
+            <h1 class="head2">united states of america</h1>
+            <P class="para2">The United States of America (U.S.A. or USA), commonly known as the United States (U.S. or US) or America, is a transcontinental country located primarily in North America. It consists of 50 states, a federal district, five major unincorporated territories, nine minor outlying islands,[j] and 326 Indian reservations. It is the third-largest country by total area and fourth-largest by land area.[d] The United States shares land borders with Canada to its north and with Mexico to its south. It has maritime borders with the Bahamas, Cuba, Russia, and other nations.[k] With a population of over 331 million,[e] it is the third most populous country in the world. 
+                The national capital is Washington, D.C., and the most populous city and financial center is New York City.</P>
     </div>
    
 </body>
